tests/NormalTests/paczka1/fuzzy1/84585084.err
Error in line 4: aAv6H6D S955 64,1
Error in line 10: OJ0 A762 16,3
Error in line 21: Md0 A441 73,6
